# romanesk

./: .editorconfig  .gitignore  .htaccess  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PHASE-0-PLAN.md  PRD.md  README.md  ROADMAP.md  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
apps/desktop/: .gitignore  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
apps/desktop/public/fonts/: fonts.css
apps/desktop/src/: App.tsx  index.css  main.tsx  router.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  safety.rs
apps/desktop/src-tauri/src/commands/: ai.rs  anchor.rs  chapter.rs  detect.rs  entity.rs  era.rs  error.rs  event.rs  import.rs  merge.rs  mod.rs  relation.rs  rename.rs  settings.rs  snapshot.rs  story.rs  tag.rs  universe.rs
apps/desktop/src-tauri/src/commands/ai/: complete.rs  delete.rs  describe.rs  draft.rs  import.rs  mod.rs  models.rs  pull.rs  rag.rs  state.rs  status.rs  util.rs
apps/desktop/src-tauri/src/commands/rename/: apply.rs  mod.rs  scan.rs  text_walker.rs  types.rs
apps/desktop/src/components/: AIStatusBadge.tsx  AiActionsPanel.tsx  AiConsistencyPanel.tsx  AiContinuePanel.tsx  AiDescriptionPanel.tsx  AiDraftPanel.tsx  BrainstormPanel.tsx  CommandPalette.tsx  CoverImage.tsx  EntityMergeDialog.tsx  EntityRenameDialog.tsx  ErrorBoundary.tsx  ImportProgressOverlay.tsx  Layout.tsx  ModelPullPanel.tsx  OnboardingGate.tsx  PageMeta.tsx  RagChatPanel.tsx  RelationsSection.tsx  SimpleEntitySection.tsx  SnapshotsSection.tsx  StoriesSection.tsx  TagsSection.tsx  TimelineSection.tsx  TiptapEditor.tsx  UnknownNamesPanel.tsx
apps/desktop/src/components/ui/: ai-card.tsx  button.tsx  card.tsx  eyebrow.tsx  glyph.tsx  input.tsx  kbd.tsx  kind-combobox.tsx  label.tsx  pill.tsx  sigillum.tsx  textarea.tsx
apps/desktop/src/lib/: api.test.ts  api.ts  clipboard.ts  dialog.tsx  import-extract.ts  tiptap-utils.ts  types.ts  use-settings.ts  utils.ts
apps/desktop/src/pages/: AnchorPage.tsx  EntityPage.tsx  GraphPage.tsx  ImportPage.tsx  LibraryPage.tsx  SettingsPage.tsx  StoryPage.tsx  TimelinePage.tsx  UniversePage.tsx
apps/desktop/src/pages/details/: CharacterDetail.tsx  ConceptDetail.tsx  FactionDetail.tsx  LocationDetail.tsx  ObjectDetail.tsx
apps/desktop/src/types/: lazy-import-stubs.d.ts
apps/desktop/tests/: setup.ts
apps/landing/: .htaccess  README.md  _headers  affiliate.js  app.jsx  charte.html  download.js  index.html  package.json  styles.css
apps/landing/uploads/: Romanesk - Site (placeholder bundler).html
crates/core/: Cargo.toml
crates/core/examples/: ping_ollama.rs
crates/core/src/: domain.rs  lib.rs
crates/core/src/ai/: mock.rs  mod.rs  ollama.rs  provider.rs
crates/core/src/db/: connection.rs  migrations.rs  mod.rs
crates/core/src/export/: markdown.rs  mod.rs
crates/core/src/rag/: mod.rs  vec.rs
crates/core/src/repo/: anchor.rs  chapter.rs  entity.rs  era.rs  error.rs  event.rs  mod.rs  relation.rs  snapshot.rs  story.rs  tag.rs  universe.rs
crates/core/tests/: rag_integration.rs  relation_integration.rs  repo_integration.rs  tag_integration.rs  timeline_integration.rs
db/migrations/: 0001_init.sql
docs/: LICENSE-CHOICE.md  PITCH.md  RETRO-PHASE-0.md  RETRO-PHASE-1.md  RETRO-PHASE-2.md  RETRO-PHASE-3.md  RETRO-PHASE-4.md  RETRO-PHASE-5.md  RETRO-PHASE-6.md  SIGNING.md
docs/ADR/: 0001-stack.md  0002-editor.md  0003-relations.md  0004-migrations.md  0005-vector-search.md
scripts/: fetch-fonts.py  gen-icon.py
