[workspace]
resolver = "2"
members = [
    "crates/core",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "LicenseRef-Elastic-2.0"
repository = "https://github.com/hmorales-pro/romanesk"
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"  # à durcir en Phase 1+

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # un peu d'optim sinon le RAG est lent en dev
