[package]
name = "romanesk-desktop"
version = "0.6.0"
description = "Romanesk desktop app (Tauri 2 + React)."
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# Tauri 2 sépare main.rs (binary) de lib.rs (mobile entry point).
# Le binaire desktop est `romanesk-desktop`, la lib partagée est `romanesk_desktop_lib`.
[lib]
name = "romanesk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Versions tauri en semver permissif (^2). cargo résout sur le dernier
# minor compatible. Le pin précédent (2.1 strict) avait causé un mismatch
# avec les plugins ; maintenant on laisse cargo aligner naturellement.
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
base64 = "0.22"
# tokio::sync::RwLock pour les States hot-reloadable (P5.3 + P6.2). Tauri
# tire déjà tokio comme runtime interne, on le déclare explicitement avec
# la feature `sync` pour utiliser RwLock côté commands.
tokio = { version = "1", features = ["sync"] }
# reqwest pour les commandes Tauri qui doivent parler à Ollama directement
# (ai_list_models). Le crate core l'utilise déjà — on l'ajoute en dep explicite
# côté src-tauri pour ne pas dépendre d'un re-export.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
# regex pour le scan word-boundary dans le rename propagé (P14.1)
regex = "1"
# sqlx — accès direct au pool pour les opérations cross-tables qui ne
# tiennent pas dans une seule méthode du Repo (P14.2 fusion de fiches :
# transaction atomique sur 6 tables avec dedup PK composites).
# Aligné avec la version utilisée par romanesk-core.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }

# Notre logique métier réutilisable (Phase 0 — J3+).
romanesk-core = { path = "../../../crates/core" }

[features]
# Évite que Tauri ouvre une console Windows en release.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
